# vitest-wasm-pack-error-repro

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
math-lib/: Cargo.toml
web/: index.html  main.ts  test.ts
